Creado mediante Colaboratory

--- a/ppi1.ipynb
+++ b/ppi1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPPNFwvJBP1MOc9mr9fAZ6C",
+      "authorship_tag": "ABX9TyMRTarydhpQVkAEoJdngF/n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,6 +83,15 @@
       ],
       "metadata": {
         "id": "elMqLOx6Ey8D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Archivo modificado"
+      ],
+      "metadata": {
+        "id": "gNNiWwfpHZAT"
       }
     }
   ]
